--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "axios": "^0.16.2",
     "babel-preset-react": "^6.24.1",
     "coffeescript": "1.12.7",
+    "css-loader": "^0.28.7",
     "jquery": "^3.2.1",
+    "moment": "^2.19.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
+    "react-big-calendar": "^0.16.1",
+    "react-datepicker": "^0.55.0",
     "react-dom": "^16.0.0",
     "react-fullcalendar": "^1.0.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "style-loader": "^0.19.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.9.1"
